app/kustomize/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ariansvi-resume
  labels:
    app: ariansvi-resume
spec:
  selector:
    matchLabels:
      app: ariansvi-resume
  template:
    metadata:
      labels:
        app: ariansvi-resume
    spec:
      containers:
      - name: ariansvi-resume
        image: ariansvi/ariansvi-resume
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
